Fix the manual to work with both texinfo-4 and texinfo-5.
Texinfo has been stable for the first 15 years of FFTW's history.
Then some genius, with too much time in his hands and on a mission to
deliver the world from the evil of the C language, decided to rewrite
makeinfo in Perl, the old C version of makeinfo being, as I said,
evil.  The official excuse for the rewrite was that now I can have my
manual in XML format, as if XML were a feature.

The result of this stroke of genius is that texinfo-5 has different
rules for macro expansion than texinfo-4 does, specifically regarding
whether or not spaces after a macro are ignored.  Texinfo-4 had weird
rules, but at least they were constant and internally more or less
consistent.  Texinfo-5 has different rules, and even worse the rules
in texinfo-5 are inconsistent between the TeX and HTML output
processors.  This situation makes it almost impossible for us to
produce a manual that works with both texinfo 4 and 5 in all modes
(TeX, info, and html).  The @noindent/@refill hack is my best shot at
patching this situation.

--- a/doc/fftw3.texi
+++ b/doc/fftw3.texi
@@ -26,7 +26,60 @@
 @parskip=@medskipamount
 @end iftex
 
+@c
+@c The following macros are coded in a weird way:
+
+@c    @macro FOO
+@c    @noindent
+@c    <STUFF>
+@c    @refill
+@c    @end macro
+
+@c The @noindent/@refill stuff is not necessary in texinfo up to version
+@c 4, but it is a hack necessary to make texinfo-5 work.
+
+@c Texinfo has been stable for the first 15 years of FFTW's history.
+@c Then some genius, with too much time in his hands and on a mission to
+@c deliver the world from the evil of the C language, decided to rewrite
+@c makeinfo in Perl, the old C version of makeinfo being, as I said,
+@c evil.  The official excuse for the rewrite was that now I can have my
+@c manual in XML format, as if XML were a feature.
+
+@c The result of this stroke of genius is that texinfo-5 has different
+@c rules for macro expansion than texinfo-4 does, specifically regarding
+@c whether or not spaces after a macro are ignored.  Texinfo-4 had weird
+@c rules, but at least they were constant and internally more or less
+@c consistent.  Texinfo-5 has different rules, and even worse the rules
+@c in texinfo-5 are inconsistent between the TeX and HTML output
+@c processors.  This situation makes it almost impossible for us to
+@c produce a manual that works with both texinfo 4 and 5 in all modes
+@c (TeX, info, and html).  The @noindent/@refill hack is my best shot at
+@c patching this situation.
+
+@c "@noindent" has two effects: First, it makes texinfo-5 believe that
+@c the next "@ifinfo" is on a new line, otherwise texinfo-5 complains
+@c that it is not (even though it obviously is).  Second, "@noindent" is
+@c a macro that eats extra space, and we want this effect because somehow
+@c macro expansion in texinfo-5 inserts extra spaces that were not there
+@c in texinfo-4.
+
+@c "@refill" stops texinfo-5 from interpreting the rest of the line after
+@c a macro invocation as an argument to "@end tex".  For example, in
+@c "FFTW uses @Onlogn algorithms", somehow texinfo-5 thinks that
+@c "algorithms" is an argument to "@end tex".  "@noindent" would have the
+@c same effect (as would any other macro invocation, I think), but,
+@c unlike "@noindent", "@refill" does not eat spaces and does not scan
+@c the rest of the input file for macro arguments.  However, "@refill" is
+@c deemed "obsolete" in the texinfo-5 source code, so expect this to
+@c break at some point.
+
+@c This situation is wholly unsatisfactory, and the GNU project is
+@c obviously out of control.  If this nonsense persists, we will abandon
+@c texinfo and produce a latex-only version of the manual.
+
+
 @macro Onlogn
+@noindent
 @ifinfo
 O(n log n)
 @end ifinfo
@@ -36,9 +89,11 @@ O(n log n)
 @tex
 $O(n \\log n)$
 @end tex
+@refill
 @end macro
 
 @macro ndims
+@noindent
 @ifinfo
 n[0] x n[1] x n[2] x ... x n[d-1]
 @end ifinfo
@@ -48,9 +103,11 @@ n<sub>0</sub>&nbsp;&times;&nbsp;n<sub>1</sub>&nbsp;&times;&nbsp;n<sub>2</sub>&nb
 @tex
 $n_0 \\times n_1 \\times n_2 \\times \\cdots \\times n_{d-1}$
 @end tex
+@refill
 @end macro
 
 @macro ndimshalf
+@noindent
 @ifinfo
 n[0] x n[1] x n[2] x ... x (n[d-1]/2 + 1)
 @end ifinfo
@@ -60,9 +117,11 @@ n<sub>0</sub>&nbsp;&times;&nbsp;n<sub>1</sub>&nbsp;&times;&nbsp;n<sub>2</sub>&nb
 @tex
 $n_0 \\times n_1 \\times n_2 \\times \\cdots \\times (n_{d-1}/2 + 1)$
 @end tex
+@refill
 @end macro
 
 @macro ndimspad
+@noindent
 @ifinfo
 n[0] x n[1] x n[2] x ... x [2 (n[d-1]/2 + 1)]
 @end ifinfo
@@ -72,9 +131,11 @@ n<sub>0</sub>&nbsp;&times;&nbsp;n<sub>1</sub>&nbsp;&times;&nbsp;n<sub>2</sub>&nb
 @tex
 $n_0 \\times n_1 \\times n_2 \\times \\cdots \\times [2(n_{d-1}/2 + 1)]$
 @end tex
+@refill
 @end macro
 
 @macro twodims{d1, d2}
+@noindent
 @ifinfo
 \d1\ x \d2\
 @end ifinfo
@@ -84,9 +145,11 @@ $n_0 \\times n_1 \\times n_2 \\times \\cdots \\times [2(n_{d-1}/2 + 1)]$
 @tex
 $\d1\ \\times \d2\$
 @end tex
+@refill
 @end macro
 
 @macro threedims{d1, d2, d3}
+@noindent
 @ifinfo
 \d1\ x \d2\ x \d3\
 @end ifinfo
@@ -96,9 +159,11 @@ $\d1\ \\times \d2\$
 @tex
 $\d1\ \\times \d2\ \\times \d3\$
 @end tex
+@refill
 @end macro
 
 @macro dimk{k}
+@noindent
 @ifinfo
 n[\k\]
 @end ifinfo
@@ -108,10 +173,12 @@ n<sub>\k\</sub>
 @tex
 $n_\k\$
 @end tex
+@refill
 @end macro
 
 
 @macro ndimstrans
+@noindent
 @ifinfo
 n[1] x n[0] x n[2] x ... x n[d-1]
 @end ifinfo
@@ -121,6 +188,7 @@ n<sub>1</sub>&nbsp;&times;&nbsp;n<sub>0</sub>&nbsp;&times;&nbsp;n<sub>2</sub>&nb
 @tex
 $n_1 \\times n_0 \\times n_2 \\times \\cdots \\times n_{d-1}$
 @end tex
+@refill
 @end macro
 
 @copying
@@ -156,8 +224,8 @@ approved by the Free Software Foundation.
 @titlepage
 @title FFTW
 @subtitle for version @value{VERSION}, @value{UPDATED}
-@author{Matteo Frigo}
-@author{Steven G. Johnson}
+@author Matteo Frigo
+@author Steven G. Johnson
 @page
 @vskip 0pt plus 1filll
 @insertcopying
